test/files/neg/macro-without-xmacros-a.check
Macros_2.scala:5: error: macro definition needs to be enabled
by making the implicit value scala.language.experimental.macros visible.
This can be achieved by adding the import clause 'import scala.language.experimental.macros'
or by setting the compiler option -language:experimental.macros.
See the Scaladoc for value scala.language.experimental.macros for a discussion
why the feature needs to be explicitly enabled.
    def foo(x: Int): Int = macro foo_impl
        ^
Macros_2.scala:7: error: macro definition needs to be enabled
by making the implicit value scala.language.experimental.macros visible.
  def bar(x: Int): Int = macro bar_impl
      ^
Macros_2.scala:11: error: macro definition needs to be enabled
by making the implicit value scala.language.experimental.macros visible.
  def quux(x: Int): Int = macro quux_impl
      ^
three errors found
